--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "NODE_ENV=development node ./src/index.js",
+    "start:dev": "NODE_ENV=development nodemon ./src/index.js",
+    "start:stage": "NODE_ENV=staging node ./src/index.js",
+    "start:prod": "NODE_ENV=production node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/sagarrajkule/Fastify-CRUD-App.git",
@@ -11,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^9.0.0",
+    "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
     "fastify-formbody": "^1.0.0",
     "mongoose": "^8.1.1",
