--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fastify-formbody": "^1.0.0",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.2.4"
   },
   "devDependencies": {
